<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:layout_marginHorizontal="10dp"
    android:layout_marginTop="10dp"
    android:background="@drawable/appointment_view"
    android:padding="10dp">

    <TextView
        android:id="@+id/apType"
        android:layout_width="wrap_content"
        android:text="@string/list_row_type"
        android:layout_height="match_parent"
        android:textStyle="bold"
        android:singleLine="false"
        android:textSize="18sp"/>

    <View
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:minWidth="10dp"
        android:layout_weight="1" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/doctorName"
            android:text="@string/list_row_doctor"
            android:layout_width="wrap_content"
            android:layout_gravity="right"
            android:layout_height="wrap_content"
            android:textSize="12sp"/>
        <TextView
            android:id="@+id/date"
            android:text="@string/list_row_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:textSize="12sp"/>
    </LinearLayout>

</LinearLayout>