<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterUser">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:fillViewport="true"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="10"
            android:orientation="vertical">

            <TextView
                android:id="@+id/registerUserTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/register_title_en"
                android:textAlignment="center"
                android:textSize="32sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="80"
            android:orientation="vertical">

            <TextView
                android:id="@+id/snsText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/register_snsText_en"
                android:textAlignment="center"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/snsEdit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:autofillHints="text"
                android:hint="@string/register_snsText_en"
                android:inputType="text"
                android:minHeight="48dp"
                android:textAlignment="center"
                tools:ignore="DuplicateSpeakableTextCheck" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2" />

            <TextView
                android:id="@+id/nameText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/register_nameText_en"
                android:textAlignment="center"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/nameEdit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:autofillHints="text"
                android:hint="@string/register_nameText_en"
                android:inputType="text"
                android:minHeight="48dp"
                android:textAlignment="center"
                tools:ignore="DuplicateSpeakableTextCheck" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2" />

            <TextView
                android:id="@+id/emailText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/register_emailText"
                android:textAlignment="center"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/emailEdit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:autofillHints="text"
                android:hint="@string/register_emailText"
                android:inputType="textEmailAddress"
                android:minHeight="48dp"
                android:textAlignment="center"
                tools:ignore="DuplicateSpeakableTextCheck" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2" />

            <TextView
                android:id="@+id/passwordText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/register_passwordText"
                android:textAlignment="center"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/passwordEdit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:autofillHints="text"
                android:hint="@string/register_passwordText"
                android:inputType="textPassword"
                android:minHeight="48dp"
                android:textAlignment="center"
                tools:ignore="DuplicateSpeakableTextCheck" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2" />

            <TextView
                android:id="@+id/retypePasswordText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/register_rePasswordText_en"
                android:textAlignment="center"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/retypePasswordEdit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:autofillHints="text"
                android:hint="@string/register_rePasswordText_en"
                android:inputType="textPassword"
                android:minHeight="48dp"
                android:textAlignment="center"
                tools:ignore="DuplicateSpeakableTextCheck" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="10"
            android:orientation="horizontal">

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <Button
                android:id="@+id/confirm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:text="@string/register_confirm_en" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <Button
                android:id="@+id/cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/register_cancel_en" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />
        </LinearLayout>
    </LinearLayout>

    <!--SNS Number -->


    <!--Username -->


    <!--Email -->


    <!--Password -->

    <!--Retype password -->


</androidx.constraintlayout.widget.ConstraintLayout>