<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#b1dafa"
    tools:context=".MainActivity">

    <RelativeLayout
        android:id="@+id/cover"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:translationZ="30dp"
        android:visibility="visible">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/cover"/>

    </RelativeLayout>


    <LinearLayout
        android:id="@+id/main_title_body"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="15sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:background="@drawable/initial_text_view"
        app:layout_constraintTop_toTopOf="parent" >


        <TextView
            android:id="@+id/welcomeText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_welcome_message_en"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="32sp"
            android:visibility="invisible" />

        <ImageView
            android:id="@+id/profilePic"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@mipmap/main_page_image_round" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/main_body"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/main_title_body"
        app:layout_constraintBottom_toBottomOf="parent">

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <EditText
            android:id="@+id/identificationBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autofillHints="text"
            android:hint="@string/login_id_hint"
            android:inputType="text"
            android:minHeight="48dp"
            android:textAlignment="center"
            android:visibility="invisible" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <EditText
            android:id="@+id/passwordBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/login_password"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:textAlignment="center"
            android:visibility="invisible" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2" />

        <LinearLayout
            android:id="@+id/main_button_body"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <Button
                android:id="@+id/confirm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_confirm_en"
                android:visibility="invisible" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <Button
                android:id="@+id/register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_register_en"
                android:visibility="invisible" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />
        </LinearLayout>

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="3" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="Made by Ângelo Morgado"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>