<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#b1dafa"
    tools:context=".SettingsPage">

    <TextView
        android:id="@+id/welcomeText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="21dp"
        android:shadowColor="#000000"
        android:text="@string/settings_welcome_en"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="32sp"
        android:background="@drawable/textview_smooth_edges"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.02"
        tools:layout_editor_absoluteX="21dp" />


    <!--Menu-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/settings_menu"
        app:layout_constraintTop_toBottomOf="@+id/welcomeText">


        <Space
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_height="wrap_content" />

        <ImageView
            android:id="@+id/profilePic"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@mipmap/avatar_male_foreground" />


        <TextView
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textColor="#2d24b3"
            android:textAlignment="center"
            android:text="Username" />

        <Space
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/settings_reportButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30sp"
            android:textColor="@color/white"
            android:background="#375c91"
            android:layout_marginBottom="20dp"
            android:text="@string/settings_report_button_en" />

        <Button
            android:id="@+id/settings_outButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:background="#701a1a"
            android:layout_marginHorizontal="30sp"
            android:text="@string/settings_logout_button_en" />

        <Space
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/settings_menu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="bottom|clip_vertical"
        android:orientation="horizontal"
        android:background="#375c91"
        app:layout_constraintBottom_toBottomOf="parent">


        <ImageButton
            android:id="@+id/settings_homeButton"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:src="@mipmap/home_transparent"
            app:layout_constraintBottom_toBottomOf="parent" />

        <ImageButton
            android:id="@+id/settings_addButton"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:src="@mipmap/add_transparent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toLeftOf="@id/home_homeButton"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/settings_appointmentsButton"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:src="@mipmap/list_transparent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toLeftOf="@id/home_addButton"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/settings_settingsButton"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:src="@mipmap/settings_good"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toLeftOf="@id/home_appointmentsButton"
            app:layout_constraintTop_toTopOf="parent" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>